--- a/Dockerfile.tmpl
+++ b/Dockerfile.tmpl
@@ -42,5 +42,10 @@ ARG AIR_GAPPED=false
 
 COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 # Use the BUNDLE_DIR build argument to copy files into the bundle
+
+#install eksctl
+RUN curl --silent --location "https://github.com/weaveworks/eksctl/releases/download/latest_release/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp && mv /tmp/eksctl /usr/local/bin
+
+
 ARG BUNDLE_DIR
 COPY . $BUNDLE_DIR
